--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 <!--  value="cbaktiarkyzy@gmail.com">                                         -->
 <!--  ----------------------------------------------------------------------  -->
 
-<label for="name">Contact Name </label><input placeholder="Contact name" id="name" maxlength="80" name="name" size="20" type="text" /><br>
+
+<label for="name">Contact Name</label><input  id="name" maxlength="80" right="20" left="20"name="name" size="20" type="text" /><br>
 
 <label for="email">Email</label><input  id="email" maxlength="80" name="email" size="20" type="text" /><br>
 
