--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
 <!--  ----------------------------------------------------------------------  -->
 
 
-<label for="name">Contact Name</label><input  id="name" maxlength="80" right="20" left="20"name="name" size="20" type="text" /><br>
+<input placeholder="Contact name" id="name" maxlength="80" right="20" left="20"name="name" size="20" type="text" /><br>
 
-<label for="email">Email</label><input  id="email" maxlength="80" name="email" size="20" type="text" /><br>
+<input placeholder="Email" id="email" maxlength="80" name="email" size="20" type="text" /><br>
 
-<label for="phone">Phone</label><input  id="phone" maxlength="40" name="phone" size="20" type="text" /><br>
+<input placeholder="Phone number" id="phone" maxlength="40" name="phone" size="20" type="text" /><br>
 
-<label for="subject">Subject</label><input  id="subject" maxlength="80" name="subject" size="20" type="text" /><br>
+<input placeholder="Subject"  id="subject" maxlength="80" name="subject" size="20" type="text" /><br>
 
-<label for="description">Description</label><textarea name="description"></textarea><br>
+<textarea placeholder="Description" name="description"></textarea><br>
 
-<label for="company">Company</label><input  id="company" maxlength="80" name="company" size="20" type="text" /><br>
+<input placeholder="Submit" id="company" maxlength="80" name="company" size="20" type="text" /><br>
 
-<input type="submit" name="submit">
+<input type="submit" name="submit" color="black">
 
 </form>
