--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
 <!--  ----------------------------------------------------------------------  -->
 
 
-<input placeholder="Contact name" id="name" maxlength="80" right="20" left="20"name="name" size="20" type="text" /><br>
+<input placeholder="Contact name" id="name" maxlength="80" right="20" left="20" top="30"name="name" size="20" type="text" /><br>
 
-<input placeholder="Email" id="email" maxlength="80" name="email" size="20" type="text" /><br>
+<input placeholder="Email" id="email" right="20" left="20" top="30" maxlength="80" name="email" size="20" type="text" /><br>
 
-<input placeholder="Phone number" id="phone" maxlength="40" name="phone" size="20" type="text" /><br>
+<input placeholder="Phone number" id="phone" right="20" left="20" top="30"maxlength="40" name="phone" size="20" type="text" /><br>
 
-<input placeholder="Subject"  id="subject" maxlength="80" name="subject" size="20" type="text" /><br>
+<input placeholder="Subject"  id="subject" right="20" left="20" top="30" maxlength="80" name="subject" size="20" type="text" /><br>
 
-<textarea placeholder="Description" name="description"></textarea><br>
+<textarea placeholder="Description" name="description" right="20" left="20" top="30"></textarea><br>
 
-<input placeholder="Submit" id="company" maxlength="80" name="company" size="20" type="text" /><br>
+<input placeholder="Submit" id="company" right="20" left="20" top="30" maxlength="80" name="company" size="20" type="text" /><br>
 
-<input type="submit" name="submit" color="black">
+
 
 </form>
