--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <!--  ----------------------------------------------------------------------  -->
 
 
-<input style="font-weight: bold; color: red;" placeholder="Contact name" id="name" maxlength="80" right="20" left="20" top="30"name="name" size="20" type="text" /><br>
+<input style="font-weight: bold; color: red right="20" left="20";" placeholder="Contact name" id="name" maxlength="80" right="20" left="20" top="30"name="name" size="20" type="text" /><br>
 
 <input placeholder="Email" id="email" right="20" left="20" top="30" maxlength="80" name="email" size="20" type="text" /><br>
 
