--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 <!--  ----------------------------------------------------------------------  -->
 
 
-<input style="font-weight: bold; color: red right="20" left="20";" placeholder="Contact name" id="name" maxlength="80" right="20" left="20" top="30"name="name" size="20" type="text" /><br>
+<input style="font-weight: bold; top="30"color: red right="20" left="20";" placeholder="Contact name" id="name" maxlength="80" right="20" left="20" top="30"name="name" size="20" type="text" /><br>
 
-<input placeholder="Email" id="email" right="20" left="20" top="30" maxlength="80" name="email" size="20" type="text" /><br>
+<input  style="font-weight: bold; top="30"color: red right="20" left="20";" placeholder="Email" id="email" right="20" left="20" top="30" maxlength="80" name="email" size="20" type="text" /><br>
 
-<input placeholder="Phone number" id="phone" right="20" left="20" top="30"maxlength="40" name="phone" size="20" type="text" /><br>
+<input  style="font-weight: bold; top="30"color: red right="20" left="20";" placeholder="Phone number" id="phone" right="20" left="20" top="30"maxlength="40" name="phone" size="20" type="text" /><br>
 
-<input placeholder="Subject"  id="subject" right="20" left="20" top="30" maxlength="80" name="subject" size="20" type="text" /><br>
+<input  style="font-weight: bold; top="30"color: red right="20" left="20";" placeholder="Subject"  id="subject" right="20" left="20" top="30" maxlength="80" name="subject" size="20" type="text" /><br>
 
 <textarea placeholder="Description" name="description" right="20" left="20" top="30"></textarea><br>
 
