--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
 
 <form action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8" method="POST">
 
-<input  type=hidden name="orgid" value="00D7Q0000090e5a">
-<input type=hidden name="retURL" value="http://">
+    <input type=hidden name="orgid" value="00D7Q0000090e5a">
+    <input type=hidden name="retURL" value="http://">
 
-<!--  ----------------------------------------------------------------------  -->
-<!--  NOTE: These fields are optional debugging elements. Please uncomment    -->
-<!--  these lines if you wish to test in debug mode.                          -->
-<!--  <input type="hidden" name="debug" value=1>                              -->
-<!--  <input type="hidden" name="debugEmail"                                  -->
-<!--  value="cbaktiarkyzy@gmail.com">                                         -->
-<!--  ----------------------------------------------------------------------  -->
+    <!--  ----------------------------------------------------------------------  -->
+    <!--  NOTE: These fields are optional debugging elements. Please uncomment    -->
+    <!--  these lines if you wish to test in debug mode.                          -->
+    <!--  <input type="hidden" name="debug" value=1>                              -->
+    <!--  <input type="hidden" name="debugEmail"                                  -->
+    <!--  value="cbaktiarkyzy@gmail.com">                                         -->
+    <!--  ----------------------------------------------------------------------  -->
+<div class="container">
+    <label for="name">Contact Name</label><input  id="name" maxlength="80" name="name" size="20" type="text" /><br>
 
+    <label for="email">Email</label><input  id="email" maxlength="80" name="email" size="20" type="text" /><br>
 
-<input style="font-weight: bold; top="30"color: red right="20px" left="20px";" placeholder="Contact name" id="name" maxlength="80" right="20" left="20" top="30"name="name" size="20" type="text" /><br>
+    <label for="phone">Phone</label><input  id="phone" maxlength="40" name="phone" size="20" type="text" /><br>
 
-<input  style="font-weight: bold; top="30"color: red right="20px" left="20px";" placeholder="Email" id="email" right="20" left="20" top="30" maxlength="80" name="email" size="20" type="text" /><br>
+    <label for="subject">Subject</label><input  id="subject" maxlength="80" name="subject" size="20" type="text" /><br>
 
-<input  style="font-weight: bold; top="30"color: red right="20px" left="20px";" placeholder="Phone number" id="phone" right="20" left="20" top="30"maxlength="40" name="phone" size="20" type="text" /><br>
+    <label for="description">Description</label><textarea name="description"></textarea><br>
 
-<input  style="font-weight: bold; top="30"color: red right="20px" left="20px";" placeholder="Subject"  id="subject" right="20" left="20" top="30" maxlength="80" name="subject" size="20" type="text" /><br>
+    <label for="company">Company</label><input  id="company" maxlength="80" name="company" size="20" type="text" /><br>
 
-<textarea placeholder="Description" name="description" right="20" left="20" top="30"></textarea><br>
-
-<input placeholder="Submit" id="company" right="20" left="20" top="30" maxlength="80" name="company" size="20" type="text" /><br>
-
-
+    <input  class="submit " type="submit" name="submit">
+    </div>
 
 </form>
