--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="css.style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
