--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
 <!--  ----------------------------------------------------------------------  -->
 <!--  NOTE: Please add the following <FORM> element to your page.             -->
@@ -43,6 +44,7 @@
     <label for="company">Company</label><input  id="company" maxlength="80" name="company" size="20" type="text" /><br>
 
     <input  class="submit " type="submit" name="submit">
+   
     </div>
 
 </form>
