--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!--  <input type="hidden" name="debugEmail"                                  -->
     <!--  value="cbaktiarkyzy@gmail.com">                                         -->
     <!--  ----------------------------------------------------------------------  -->
-<div class="container">
+<div style="background-image: url("images3/GoraBeluha.jpg");" class="container">
     <label for="name">Contact Name</label><input  id="name" maxlength="80" name="name" size="20" type="text" /><br>
 
     <label for="email">Email</label><input  id="email" maxlength="80" name="email" size="20" type="text" /><br>
