--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
-<!--  ----------------------------------------------------------------------  -->
-<!--  NOTE: Please add the following <META> element to your page <HEAD>.      -->
-<!--  If necessary, please modify the charset parameter to specify the        -->
-<!--  character set of your HTML page.                                        -->
-<!--  ----------------------------------------------------------------------  -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css.style">
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+<!--  ----------------------------------------------------------------------  -->
+<!--  NOTE: Please add the following <META> element to your page <HEAD>.      -->
+<!--  If necessary, please modify the charset parameter to specify the        -->
+<!--  character set of your HTML page.                                        -->
+<!--  ----------------------------------------------------------------------  -->
+
 <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
-   
+
 <!--  ----------------------------------------------------------------------  -->
 <!--  NOTE: Please add the following <FORM> element to your page.             -->
 <!--  ----------------------------------------------------------------------  -->
@@ -30,7 +30,7 @@
     <!--  <input type="hidden" name="debugEmail"                                  -->
     <!--  value="cbaktiarkyzy@gmail.com">                                         -->
     <!--  ----------------------------------------------------------------------  -->
-<div style="background-image: url("images3/GoraBeluha.jpg");" class="container">
+<div class="container">
     <label for="name">Contact Name</label><input  id="name" maxlength="80" name="name" size="20" type="text" /><br>
 
     <label for="email">Email</label><input  id="email" maxlength="80" name="email" size="20" type="text" /><br>
@@ -44,7 +44,8 @@
     <label for="company">Company</label><input  id="company" maxlength="80" name="company" size="20" type="text" /><br>
 
     <input  class="submit " type="submit" name="submit">
-   
     </div>
 
 </form>
+</body>
+</html>
